extract device list title string

--- a/Photon-Tinker/Base.lproj/TinkerStrings.strings
+++ b/Photon-Tinker/Base.lproj/TinkerStrings.strings
@@ -2,9 +2,11 @@
   TinkerStrings.strings
   Particle
 
-  Created by Raimundas Sakalauskas on 15/05/2019.
+  Created by Raimundas Sakalauskas on 28/08/2019.
   Copyright © 2019 Particle. All rights reserved.
 */
 
-"Tinker.Welcome.GetStartedButton" = "Get Started123";
-"Tinker.Welcome.Version" = "v{{0}}b{{1}}123";
+"Tinker.Welcome.GetStartedButton" = "Get Started";
+"Tinker.Welcome.Version" = "v{{0}}b{{1}}";
+
+"Tinker.DeviceList.Title" = "Your Devices123";
