--- a/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
+++ b/Photon-Tinker/Base.lproj/MeshSetupStrings.strings
@@ -287,9 +287,7 @@
 "MeshSetup.FindCommissionerSticker.Title" = "Pair assisting device with your phone";
 "MeshSetup.FindCommissionerSticker.Text" = "Find the data matrix sticker on the front of the assisting device. Use your phone camera to scan the code.";
 "MeshSetup.FindCommissionerSticker.NoteTitle" = "HELPFUL TIP!";
-"MeshSetup.FindCommissionerSticker.NoteText" = "This device will act as the assisting device
-
-to allow your {{device}} to join the {{network}} mesh network";
+"MeshSetup.FindCommissionerSticker.NoteText" = "This device will act as the assisting device to allow your {{device}} to join the {{network}} mesh network";
 "MeshSetup.FindCommissionerSticker.Button" = "Scan assisting device";
 
 
